# bp-forest

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dputest.c  eval_taskletnum.sh
common/: CMakeLists.txt  Makefile  cmake_install.cmake  common.h
common/inc/: bit_ops_macro.h  common.h  communication.h  tasks.h  workload_types.h
data/: taskletnum_upmem_pointerdram_1thread.csv
docs/: cold_hot_range_partitioning.md  hot_cold_trees.rb  serialization.md  task_signature.txt
dpu/: CMakeLists.txt  Makefile  cmake_install.cmake
dpu/inc/: allocator.h  binary_search.h  bit_ops.h  bitmap.h  bplustree.h  merge_phase.h  node_ptr.h  node_queue.h  rbtree.h  sort.h  tree.h  tree_impl.h
dpu/inc/multiple/: bplustree.h  cabin.h  split_phase.h
dpu/inc/redundant/: bplustree_redundant.h
dpu/src/: allocator.c  binary_search.c  bplustree.c  dpumain.c  merge_phase.c  rbtree.c  sort.c  split_phase.c
dpu/src/multiple/: bplustree.c  cabin.c  cabin.h  dpumain.c  merge_phase.c  split_phase.c
dpu/src/redundant/: bplustree_redundant.c  dpumain_redundant.c
host/: CMakeLists.txt  Makefile  cmake_install.cmake  split_phase_test
host/inc/: batch_transfer_buffer.hpp  bpforest.hpp  bpforest.ipp  bplustree.h  const_cap_vector.hpp  dpu_emulator.hpp  dpu_emulator.ipp  dpu_set.hpp  emulation.hpp  extendable_buffer.hpp  host_data_structures.hpp  host_params.hpp  migration.hpp  node_defs.hpp  scattered_batch_transfer_buffer.hpp  sg_block_info.hpp  simulation_by_host.hpp  statistics.hpp  upmem.hpp  upmem.ipp  upmem_emulator.hpp  upmem_emulator.ipp  upmem_impl_dpu.ipp  upmem_impl_host_only.ipp  utils.hpp  workload_buffer.hpp
host/src/: bplustree.c  host.cpp  migration.cpp  pim_host.c  simulation_by_host.cpp  split_phase_test.cpp  upmem.cpp
host/src/with_dpu/: dpu_incbin.cpp
scripts/: all_cpu.sh  build.sh  build_UPMEM.sh  build_all.sh  build_simulation.sh  clean_build.sh  cyclic_num_bptree_in_cpu.sh  debug.sh  fixed_placements_all.sh  generate_workloads.sh  num_bptree_in_cpu.sh  reproduce.sh  run_UPMEM.sh  run_host_only.sh  run_simulation.sh  simulation.sh  workload_gen.sh
workload_gen/: CMakeLists.txt  Makefile  cmake_install.cmake
workload_gen/inc/: generator.h  scrambled_zipfian_generator.h  utils.h  zipfian_generator.h
workload_gen/src/: zipfian.cpp
workload_mgmt/: CMakeLists.txt
workload_mgmt/inc/: piecewise_constant_workload.hpp  piecewise_constant_workload.ipp
