cmake_minimum_required(VERSION 3.10)
project(bp-forest C CXX)

if(DEFINED targets)
else(DEFINED targets)
    set(targets host_only;UPMEM;simulator)
endif(DEFINED targets)
if(DEFINED NR_TASKLETS)
else(DEFINED NR_TASKLETS)
    set(NR_TASKLETS 2)
endif(DEFINED NR_TASKLETS)
if(DEFINED NR_DPUS_HOST_ONLY)
else(DEFINED NR_DPUS_HOST_ONLY)
    set(NR_DPUS_HOST_ONLY 2500)
endif(DEFINED NR_DPUS_HOST_ONLY)

if(DEFINED NR_DPUS_UPMEM)
else(DEFINED NR_DPUS_UPMEM)
    set(NR_DPUS_UPMEM 2500)
endif(DEFINED NR_DPUS_UPMEM)

if(DEFINED NR_DPUS_SIMULATOR)
else(DEFINED NR_DPUS_SIMULATOR)
    set(NR_DPUS_SIMULATOR 10)
endif(DEFINED NR_DPUS_SIMULATOR)

if(DEFINED NUM_REQUESTS_PER_BATCH_HOST_ONLY)
else(DEFINED NUM_REQUESTS_PER_BATCH_HOST_ONLY)
    set(NUM_REQUESTS_PER_BATCH_HOST_ONLY 100000)
endif(DEFINED NUM_REQUESTS_PER_BATCH_HOST_ONLY)

if(DEFINED NUM_REQUESTS_PER_BATCH_UPMEM)
else(DEFINED NUM_REQUESTS_PER_BATCH_UPMEM)
    set(NUM_REQUESTS_PER_BATCH_UPMEM 100000)
endif(DEFINED NUM_REQUESTS_PER_BATCH_UPMEM)

if(DEFINED NUM_REQUESTS_PER_BATCH_SIMULATOR)
else(DEFINED NUM_REQUESTS_PER_BATCH_SIMULATOR)
    set(NUM_REQUESTS_PER_BATCH_SIMULATOR 10000)
endif(DEFINED NUM_REQUESTS_PER_BATCH_SIMULATOR)

message(NR_TASKLETS=${NR_TASKLETS})
message(NR_DPUS_HOST_ONLY=${NR_DPUS_HOST_ONLY})
message(NR_DPUS_UPMEM=${NR_DPUS_UPMEM})
message(NR_DPUS_SIMULATOR=${NR_DPUS_SIMULATOR})
message(Build type:${CMAKE_BUILD_TYPE})
add_subdirectory(external)
add_subdirectory(common)
add_subdirectory(dpu)
add_subdirectory(host)
add_subdirectory(workload_gen)
