cmake_minimum_required(VERSION 3.10)
project(bp-forest C CXX)

if(NOT DEFINED targets)
    list(APPEND targets host_only UPMEM simulator)
endif(NOT DEFINED targets)


if(NOT DEFINED NR_TASKLETS_HOST_ONLY)
    set(NR_TASKLETS_HOST_ONLY 24)
endif(NOT DEFINED NR_TASKLETS_HOST_ONLY)

if(NOT DEFINED NR_TASKLETS_UPMEM)
    set(NR_TASKLETS_UPMEM 24)
endif(NOT DEFINED NR_TASKLETS_UPMEM)

if(NOT DEFINED NR_TASKLETS_SIMULATOR)
    set(NR_TASKLETS_SIMULATOR 2)
endif(NOT DEFINED NR_TASKLETS_SIMULATOR)


if(NOT DEFINED NR_RANKS_HOST_ONLY)
    set(NR_RANKS_HOST_ONLY 40)
endif(NOT DEFINED NR_RANKS_HOST_ONLY)

if(NOT DEFINED NR_RANKS_UPMEM)
    set(NR_RANKS_UPMEM 40)
endif(NOT DEFINED NR_RANKS_UPMEM)

if(NOT DEFINED NR_RANKS_SIMULATOR)
    set(NR_RANKS_SIMULATOR 10)
endif(NOT DEFINED NR_RANKS_SIMULATOR)


if(NOT DEFINED NUM_REQUESTS_PER_BATCH_HOST_ONLY)
    set(NUM_REQUESTS_PER_BATCH_HOST_ONLY 100000)
endif(NOT DEFINED NUM_REQUESTS_PER_BATCH_HOST_ONLY)

if(NOT DEFINED NUM_REQUESTS_PER_BATCH_UPMEM)
    set(NUM_REQUESTS_PER_BATCH_UPMEM 100000)
endif(NOT DEFINED NUM_REQUESTS_PER_BATCH_UPMEM)

if(NOT DEFINED NUM_REQUESTS_PER_BATCH_SIMULATOR)
    set(NUM_REQUESTS_PER_BATCH_SIMULATOR 10000)
endif(NOT DEFINED NUM_REQUESTS_PER_BATCH_SIMULATOR)

message(NR_TASKLETS_HOST_ONLY=${NR_TASKLETS_HOST_ONLY})
message(NR_TASKLETS_UPMEM=${NR_TASKLETS_UPMEM})
message(NR_TASKLETS_SIMULATOR=${NR_TASKLETS_SIMULATOR})
message(NR_RANKS_HOST_ONLY=${NR_RANKS_HOST_ONLY})
message(NR_RANKS_UPMEM=${NR_RANKS_UPMEM})
message(NR_RANKS_SIMULATOR=${NR_RANKS_SIMULATOR})
message(NUM_REQUESTS_PER_BATCH_HOST_ONLY=${NUM_REQUESTS_PER_BATCH_HOST_ONLY})
message(NUM_REQUESTS_PER_BATCH_UPMEM=${NUM_REQUESTS_PER_BATCH_UPMEM})
message(NUM_REQUESTS_PER_BATCH_SIMULATOR=${NUM_REQUESTS_PER_BATCH_SIMULATOR})
message(Build type:${CMAKE_BUILD_TYPE})
add_subdirectory(external)
add_subdirectory(common)
add_subdirectory(dpu)
add_subdirectory(workload_mgmt)
add_subdirectory(host)
add_subdirectory(workload_gen)
