# host_only
add_library(common_host_only INTERFACE)
target_include_directories(common_host_only INTERFACE ${CMAKE_CURRENT_LIST_DIR}/inc)

target_link_libraries(common_host_only INTERFACE)
target_compile_definitions(common_host_only INTERFACE STACK_SIZE_DEFAULT=1024 NR_TASKLETS=${NR_TASKLETS_HOST_ONLY} NR_DPUS=${NR_DPUS_HOST_ONLY}  NUM_REQUESTS_PER_BATCH=${NUM_REQUESTS_PER_BATCH_HOST_ONLY} $<$<CONFIG:Debug>:PRINT_DEBUG=1>)
target_link_options(common_host_only INTERFACE -DSTACK_SIZE_DEFAULT=1024 -DNR_TASKLETS=${NR_TASKLETS_HOST_ONLY} -DNR_DPUS=${NR_DPUS_HOST_ONLY} -DNUM_REQUESTS_PER_BATCH=${NUM_REQUESTS_PER_BATCH_HOST_ONLY} $<$<CONFIG:Debug>:-DPRINT_DEBUG=1>)
target_compile_definitions(common_host_only INTERFACE NO_DPU_EXECUTION HOST_ONLY)
target_link_options(common_host_only INTERFACE -DNO_DPU_EXECUTION -DHOST_ONLY)


# UPMEM
add_library(common_UPMEM INTERFACE)
target_include_directories(common_UPMEM INTERFACE ${CMAKE_CURRENT_LIST_DIR}/inc)

target_link_libraries(common_UPMEM INTERFACE)
target_compile_definitions(common_UPMEM INTERFACE STACK_SIZE_DEFAULT=1024 NR_TASKLETS=${NR_TASKLETS_UPMEM} NR_DPUS=${NR_DPUS_UPMEM}  NUM_REQUESTS_PER_BATCH=${NUM_REQUESTS_PER_BATCH_UPMEM} $<$<CONFIG:Debug>:PRINT_DEBUG=1>)
target_link_options(common_UPMEM INTERFACE -DSTACK_SIZE_DEFAULT=1024 -DNR_TASKLETS=${NR_TASKLETS_UPMEM} -DNR_DPUS=${NR_DPUS_UPMEM} -DNUM_REQUESTS_PER_BATCH=${NUM_REQUESTS_PER_BATCH_UPMEM} $<$<CONFIG:Debug>:-DPRINT_DEBUG=1>)


# simulator
add_library(common_simulator INTERFACE)
target_include_directories(common_simulator INTERFACE ${CMAKE_CURRENT_LIST_DIR}/inc)

target_link_libraries(common_simulator INTERFACE)
target_compile_definitions(common_simulator INTERFACE STACK_SIZE_DEFAULT=1024 NR_TASKLETS=${NR_TASKLETS_SIMULATOR} NR_DPUS=${NR_DPUS_SIMULATOR}  NUM_REQUESTS_PER_BATCH=${NUM_REQUESTS_PER_BATCH_SIMULATOR} $<$<CONFIG:Debug>:PRINT_DEBUG=1>)
target_link_options(common_simulator INTERFACE -DSTACK_SIZE_DEFAULT=1024 -DNR_TASKLETS=${NR_TASKLETS_SIMULATOR} -DNR_DPUS=${NR_DPUS_SIMULATOR} -DNUM_REQUESTS_PER_BATCH=${NUM_REQUESTS_PER_BATCH_SIMULATOR} $<$<CONFIG:Debug>:-DPRINT_DEBUG=1>)
